# arithmetic-coding

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: ArithmeticCoder.cpp  ArithmeticCoder.h  Symbol.h
src/test/: main.cpp
src/ui/: MainFrame.cpp  MainFrame.h
